# dit638-cyber-car

./: .gitignore  README.md
config/: .gitmessage
doc/: CODE_OF_CONDUCT.md  Code_of_Conduct.md
microservices/: README.md
microservices/color_detection/: CMakeLists.txt
microservices/color_detection/src/: image-postprocessing-opencv.cpp
microservices/control/: CMakeLists.txt  Dockerfile  Dockerfile.armhf
microservices/control/acc/: CMakeLists.txt  Dockerfile.armhf
microservices/control/acc/src/: acc.cpp  envelopes.odvd  messages.odvd
microservices/control/cmd/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
microservices/control/cmd/src/: cluon-complete.hpp  command.cpp  envelopes.odvd  messages.odvd
microservices/control/command/src/: command.cpp
microservices/control/controller/: CMakeLists.txt
microservices/control/controller/src/: messages.odvd
microservices/control/src/: Control.cpp  Example.cpp  Image_Example.cpp  messages.odvd
microservices/delegator/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
microservices/delegator/src/: delegator.cpp  envelopes.odvd  messages.odvd
microservices/detection/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.amd64~color_detection_fix_0  Dockerfile.armhf  h264-decoder-viewer.yml
microservices/detection/src/: cluon-complete-v0.0.121.hpp  detection.cpp  envelopes.odvd
microservices/face-detect/: CMakeLists.txt
microservices/face-detect/src/: face-detector  face-detector.cpp
microservices/object_detection/: CMakeLists.txt  Dockerfile.amd64  README.md
microservices/object_detection/src/: cluon-msc  detector  image-postprocessing-opencv.cpp  messages.odvd  obj-counter-vid.cpp  obj-detect.cpp  object-detection.cpp  test
microservices/obstacle_avoidance/: CMakeLists.txt  Dockerfile.armhf
microservices/obstacle_avoidance/src/: obstacle_avoidance.cpp
microservices/receiver/: CMakeLists.txt
microservices/receiver/src/: messages.odvd  receiver.cpp
microservices/reciever/: CMakeLists.txt
microservices/reciever/src/: reciever.cpp
microservices/sender/: CMakeLists.txt  Dockerfile.armhf
microservices/sender/src/: messages.odvd  sender.cpp
microservices/simulator/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
microservices/simulator/src/: simulator.cpp
microservices/vision/color_detection/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  README.md
microservices/vision/color_detection/src/: color.cpp  detection.cpp  image-postprocessing-opencv.cpp  messages.odvd
microservices/vision/detection/: Dockerfile.amd64
microservices/vision/detection/src/: detection.cpp
microservices/vision/face-detect/: Dockerfile.amd64
microservices/vision/face-detect/src/: face-detector.cpp  messages.odvd
microservices/vision/object_detection/: Dockerfile  Dockerfile.amd64  Dockerfile.armhf
microservices/vision/object_detection/src/: cascade.xml  envelopes.odvd  messages.odvd  obj-detect.cpp  object-detection.cpp  stop-detector.cpp  test  test.cpp  test_1
microservices/vision/object_detection_old/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
